--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
 
-Welcome to Laila's programming Portfolio
+        Welcome to <em>Laila's</em> programming Portfolio
     </body>
 </html>
