--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
 <img src="csc106banner.jpeg> 
-        Welcome to <em>Laila's</em> programming Portfolio <br>
+        Welcome to <em>Laila's</em> programming Portfolio
     </body>
 </html>
