--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Laila's Progamming Portfolio</title>
     </head>
     <body>
-<img src="csc106banner.jpg> 
+<img src="csc106banner.jpeg>
         Welcome to <em>Laila's</em> programming Portfolio
     </body>
 </html>
