--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-      <img src="csc106banner.jpg"  
+      <img src="csc106banner1.jpeg"  
         Welcome to <em>Laila's</em> programming Portfolio
     </body>
 </html>
