--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
 
       <img src="csc106banner1.jpeg"  
-        Welcome to <em>Laila's</em> programming Portfolio
+       <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
     </body>
 </html>
