--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-      <img src="csc106banner1.jpeg"  
+      <img src="csc106banner1.jpeg"  <br>
        <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
     </body>
 </html>
