--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Laila's Progamming Portfolio</title>
     </head>
     <body>
-
       <img src="csc106banner1.jpeg"  <br>
        <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
+        <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
     </body>
 </html>
