--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
       <img src="csc106banner1.jpeg"  <br>
         <table>
-            <tr><td><img src="home.png"</td>
+            <tr>
+                <td><img src="home.png"</td>
+            </tr>
        <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
         <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
     </body>
