--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <tr>
                 <td align="center"><img src="home.png"></td>
                 <td align="center"><img src="javascripts.png"></td>
-                <td align="center"><img src="about me.png></td>
+                <td align="center"><img src="about me.png"></td>
             </tr>
        <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
         <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
