--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <title>Laila's Progamming Portfolio</title>
     </head>
     <body>
-      <img src="csc106banner1.jpeg"  <br>
-        <table width="800px">
-            <tr>
-                <td align="center"><img src="home.png"></td>
-                <td align="center"><img src="javascripts.png"></td>
-                <td align="center"><img src="about me.png"></td>
-            </tr>
+<img src="csc106banner1.jpeg">
+<table width="800px">
+  <tr>
+      <td align="center"><img src="home.png"></td>
+      <td align="center"><img src="javascripts.png"></td>
+      <td align="center"><img src="about me.png"></td>
+  </tr>
+</table>
+        
        <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
         <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
     </body>
