--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </table>
         
        <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
-        <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
+        <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> I have created this web page using HTML programming language.  
     </body>
 </html>
