--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
        <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
         <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> I am a digital designer and a web developer. I love helping people design better at invision. 
-            I have created this web page using HTML programming language. 
+            I have created this web page using HTML programming language. The navigation button links to apps and javascript that I have written to be embedded in web pages. 
             
     </body>
 </html>
