--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <tr>
       <td align="center"><img src="home.png"></td>
       <td align="center"><img src="javascripts.png"></td>
-      <td align="center"><img src="about me.png"></td>
+      <td align="center"><a href="about.html"><img src="about me.png"></td>
   </tr>
 </table>
         
