--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <body>
         
       <h1> <strong> About Me </strong> </h1>
-        <p> I am Laila, a digital designer and a web developer. I love helping people design better at invision. </P>
+        <p> I am Laila, a web developer and a web designer based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience. </P>
  
             
     </body>
