--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         
       <h1> <strong> About Me </strong> </h1>
       <img src="me.png"> 
-        <p> I am Laila, a web developer and a web designer based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience. </P>
+        <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience. </P>
  
             
     </body>
