--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <body>
         
       <h1> <strong> About Me </strong> </h1>
-      <img src="me.png"> 
+      <img src="https://www.freepik.com/premium-vector/cute-girl-with-hijab-reading-book-vector-illustration-cartoon-muslim-education-illustration-studying-with-book-concept_19671043.htm"> 
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience. </P>
  
             
