--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <title>Laila's Progamming Portfolio</title>
     </head>
     <body>
-        
+     <img src="study.jpeg">   
       <h1> <strong> About Me </strong> </h1>
      
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience.
