--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <body>
       
       <h1> <strong> About Me </strong> </h1>
-     <img src="study.jpeg">
+     <img src="read.jpeg">
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience.
         In addtion to that, I have been repairing computers for over a year now.</P>
  
