--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             </tr>
         </table>
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience.
-        In addtion to that, I have been repairing computers for over a year now.</P>
+        In addtion to that, I have been repairing computers for over a year now. I am passionate about developing websites because I love what I do and I have a steady source of motivation that drives me to do my best.</P>
  
             
     </body>
