--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <table width="800px">
   <tr>
       <td align="center"><img src="home.png"></td>
-      <td align="center"><a href="javascripts.html><img src="javascripts.png"></td>
+      <td align="center"><a href="javascripts.html"><img src="javascripts.png"></td>
       <td align="center"><a href="about.html"><img src="about me.png"></td>
   </tr>
 </table>
