--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,9 @@
    <img src="csc106banner1.jpeg">
         <table width="800px">
   <tr>
+      <td align="center"><img src="home.png"></td>
       <td align="center"><a href="javascripts.html"><img src="javascripts.png"></td>
+      <td align="center"><a href="about.html"><img src="about me.png"></td>
   </tr>
 </table>
       <h1> <strong> JavaScripts </strong> </h1>
