--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 <img src="csc106banner1.jpeg">
