--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 <img src="csc106banner1.jpeg">
-<table width="800px">
+<table width="800px" id="nav-table">
   <tr>
       <td align="center"><a href="index.html"><img src="home.png"></td>
       <td align="center"><a href="javascripts.html"><img src="javascripts.png"></td>
