--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <tr>
       <td align="center"><a href="index.html"><img src="home.png"></td>
       <td align="center"><a href="javascripts.html"><img src="javascripts.png"></td>
+      <td align="center"><a href="apps.html"><img src="apps.png"></td>
       <td align="center"><a href="about.html"><img src="about me.png"></td>
   </tr>
 </table>
