--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <img src="csc106banner1.jpeg">
 <table width="800px" id="nav-table">
   <tr>
-      <td align="center"><a href="index.html"><img src="home.png"></td>
-      <td align="center"><a href="javascripts.html"><img src="javascripts.png"></td>
-      <td align="center"><a href="apps.html"><img src="apps.png"></td>
-      <td align="center"><a href="about.html"><img src="about me.png"></td>
+      <td id="nav-td" align="center"><a href="index.html"><img src="home.png"></td>
+      <td id="nav-td" align="center"><a href="javascripts.html"><img src="javascripts.png"></td>
+      <td id="nav-td" align="center"><a href="about.html"><img src="about me.png"></td>
   </tr>
 </table>
         
