--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="container">
+            <div id="main">
+            </div>
+                 </div>
 <img src="csc106banner1.jpeg">
 <table width="800px" id="nav-table">
   <tr>
