--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="container">
-            <div id="main">
+        <header>
+        <div id="container"> 
+           <nav>
+               <ul>
+                   <li><a href ="#">Home</a></li>
+                   <li><a href ="#">JavaScripts</a></li>
+                   <li><a href ="#">Apps</a></li>
+                   <li><a href ="#">About Me</a></li>
+               </ul>
             </div>
-                 </div>
 <img src="csc106banner1.jpeg">
 <table width="800px" id="nav-table">
   <tr>
