--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+p {
+  background-image: url('background.jpeg');
+}
+</style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
         <link rel="stylesheet" href="style.css">
