--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+          <style>
+              p{color:white;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        </style>
     </head>
     <body>
 <img src="csc106banner1.jpeg">
