--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
           <style>
+              body{background-color:black;}
               p{color:white;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
