--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-<img src="csc106banner1.jpeg">
+<img src="mybanner.png">
 <table width="800px" id="nav-table">
   <tr>
       <td id="nav-td" align="center"><a href="index.html"><img src="home.png"></td>
