--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
           <style>
               body{background-color:black;}
               p{color:white;}
+              h1{color:white;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
         <link rel="stylesheet" href="style.css">
