--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         </style>
     </head>
     <body>
+        <header> 
+            <div class="container">
+                <nav>
+                    <ul> 
+                        <li><a href="#">NavBar</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#"></a>Javascripts</li>
+                        <li><a href="#"></a><Apps/li>
+                        <li><a href="#"></a><About Me/li>
+                    </ul>
+                </nav>
+        
+        
+        </header>
 <img src="mybanner.png" width="800px">
 <table width="800px" id="nav-table">
   <tr>
