--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <nav>
                     <ul> 
                         <li><a href="#">Home</a></li>
-                        <li><a href="#"></a>Javascripts</li>
-                        <li><a href="#"></a><Apps/li>
-                        <li><a href="#"></a><About Me/li>
+                        <li><a href="#">Javascripts</a></li>
+                        <li><a href="#">Apps</a></li>
+                        <li><a href="#">About Me</a></li>
                     </ul>
                 </nav>
         
