--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
               h1{color:white;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+        <link href="style.css">
         </style>
     </head>
     <body>
