--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
               body{background-color:black;}
               p{color:white;}
               h1{color:white;}
+              header{color: #F699CD;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
         <link href="style.css">
