--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="container">
                 <nav>
                     <ul> 
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Javascripts</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="javascripts.html">Javascripts</a></li>
                         <li><a href="#">Apps</a></li>
-                        <li><a href="#">About Me</a></li>
+                        <li><a href="about.html">About Me</a></li>
                     </ul>
                 </nav>
         
