--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
               header{color: #F699CD;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
-        <link href="style.css">
+        <li><a href="style.css"></a></li>
         </style>
     </head>
     <body>
