--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
           <style>
               body{background-color:black;}
               p{color:white;}
-             
+              h1{color: #ADD8E6;}  
               header{color: #F699CD;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
