--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
               body{background-color:black;}
               p{color:white;}
               h1{color: #ADD8E6;}  
-              header{color: #63C5DA;}
+              header{background-color: #63C5DA;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
         <li><a href="style.css"></a></li>
