--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
           <style>
               body{background-color:black;}
               p{color:white;}
-              h1{color: #ADD8E6;}  
+              h1{color: #63C5DA;}  
               header{background-color: #63C5DA;}
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
