--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
     <head>
           <style>
-              body{background-color:black;}
+              body{background-color:black;
+              margin:0;
+                  font-family:'Work Sams', sans-serif;
+                  font-weight:300;}
+              container{ width:80%;
+                  margin:0 auto;}
+              nav{ float:right;}
+              nav ul{ margin: 0;
+                  padding:0;
+                  list-style:none;}
+              nav li{ display: inline-block;margin-left: 70px;}
               p{color:white;}
               h1{color: #63C5DA;}  
               header{background-color: #63C5DA;}
