--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               nav li{ display: inline-block;margin-left: 70px;}
               p{color:white;}
               h1{color: #63C5DA;}  
-              header{background-color: #63C5DA;}
+              header1 {background-color: #63C5DA;}
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
