--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
           <style>
+              header{ background-color: #63C5DA;}
+           p{color:white;}
+              h1{color: #63C5DA;}  
               body{background-color:black;
               margin:0;
                   font-family:'Work Sams', sans-serif;
@@ -13,9 +16,6 @@
                   padding:0;
                   list-style:none;}
               nav li{ display: inline-block;margin-left: 70px;}
-              p{color:white;}
-              h1{color: #63C5DA;}  
-              header1 {background-color: #63C5DA;}
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
