--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
               nav ul{ margin: 0;
                   padding:0;
                   list-style:none;}
-              nav li{ display: inline-block;margin-left: 70px;}
+              nav li{ display: inline-block;
+                  margin-left: 70px;
+              padding-top:25px; }
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
