--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                   list-style:none;}
               nav li{ display: inline-block;
                   margin-left: 70px;
-              padding-top:25px; }
+              padding-top:25px;
+              padding-bottom:10px;}
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
