--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <img src="mybanner.png" width="800px">
 
         
-       <h1> Welcome to <em>Laila's</em> programming Portfolio </h1>
-        <p> My name is Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
+       <h1> PROGRAMMER PORTFOLIO WALKTHROUGH </h1>
+        <p> I am Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
             I have created this web page using HTML programming language. The navigation button links to javascript and about me page that I have written to be embedded in web pages. 
             
     </body>
