--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                   list-style:none;}
               nav li{ display: inline-block;
                   margin-left: 70px;
+                  margin-right:25px;}
               padding-top:25px;
               padding-bottom:18px;}
               </style>
