--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                   padding:0;
                   list-style:none;}
               nav li{ display: inline-block;
-                  margin-left: 70px;
-                  margin-right:25px;}
+                  margin-left: 50px;
+                  margin-right:20px;
               padding-top:25px;
               padding-bottom:18px;}
               </style>
