--- a/about.html
+++ b/about.html
@@ -6,14 +6,18 @@
     </head>
     <body>
         
-  <img src="csc106banner1.jpeg">
-<table width="800px">
-  <tr>
-      <td align="center"><a href="index.html"><img src="home.png"></td>
-      <td align="center"><a href="javascripts.html"><img src="javascripts.png"></td>
-      <td align="center"><a href="about.html"><img src="about me.png"></td>
-  </tr>
-</table>
+  <img src="mybanner.png" width="800px">
+<header> 
+            <div class="container">
+                <nav>
+                    <ul> 
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="javascripts.html">Javascripts</a></li>
+                        <li><a href="#">Apps</a></li>
+                        <li><a href="about.html">About Me</a></li>
+                    </ul>
+                </nav>             
+        </header>
         
       <h1> <strong> About Me </strong> </h1>
         <table width="900px">
