--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
               container{ width:80%;
                   margin:0 auto;}
               nav{ float:right;}
-              nav ul{ margin: 0;
+              nav ul{ margin: 20px;
                   padding:0;
                   list-style:none;}
               nav li{ display: inline-block;
-                  margin-left: 50px;
+                  margin-left: 20px;
                   margin-right:20px;
               padding-top:25px;
               padding-bottom:18px;}
