--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
               container{ width:80%;
                   margin:0 auto;}
               nav{ float:right;}
-              nav ul{ margin: 20px;
+              nav ul{ margin: 0;
                   padding:0;
                   list-style:none;}
               nav li{ display: inline-block;
