--- a/about.html
+++ b/about.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+              header{ background-color: #63C5DA;}
+           p{color:white;}
+              h1{color: #63C5DA;}  
+              body{background-color:black;
+              margin:0;
+                  font-family:'Work Sams', sans-serif;
+                  font-weight:300;}
+              container{ width:80%;
+                  margin:0 auto;}
+              nav{ float:right;}
+              nav ul{ margin: 0;
+                  padding:0;
+                  list-style:none;}
+              nav li{ display: inline-block;
+                  margin-left: 20px;
+                  margin-right:20px;
+              padding-top:25px;
+              padding-bottom:18px;}
+              </style>
+        
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
     </head>
