--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
               margin:0;
                   font-family:'Work Sams', sans-serif;
                   font-weight:300;}
-              container{ width:80%;
-                  margin:0 auto;}
               nav{ float:right;}
               nav ul{ margin: 0;
                   padding:0;
@@ -20,6 +18,8 @@
                   margin-right:20px;
               padding-top:25px;
               padding-bottom:18px;}
+              html { height: 100%;}
+              body {min-height: 100%;}
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
