--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
               nav{ float:right;}
               nav ul{ margin: 0;
                   padding:0;
+                  box-sizing: border-box;
                   list-style:none;}
               nav li{ display: inline-block;
                   margin-left: 20px;
                   margin-right:20px;
               padding-top:25px;
-              padding-bottom:18px;}
+              padding-bottom:18px;
+              box-sizing: border-box;}
               html { height: 100%;}
               body {min-height: 100%;}
               </style>
