--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
           <style>
-              header{ background-color: #63C5DA;}
+              header{ background-color: #FFC0CB;}
            p{color:white;}
               h1{color: #63C5DA;}  
               body{background-color:black;
@@ -20,8 +20,8 @@
               padding-top:25px;
               padding-bottom:18px;
               box-sizing: border-box;}
-              html { height: 100%;}
-              body {min-height: 100%;}
+              nav a:hover {color: #63C5DA}
+              
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
