--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <ul> 
                         <li><a href="index.html">Home</a></li>
                         <li><a href="javascripts.html">Javascripts</a></li>
-                        <li><a href="#">Apps</a></li>
+                        <li><a href="apps.html">Apps</a></li>
                         <li><a href="about.html">About Me</a></li>
                     </ul>
                 </nav>
