--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html>
     <head>
           <style>
+              p {
+  background-image: url('mybackground.jpeg');
+}
               header{ background-color: #FFC0CB;}
            p{color:white;}
               h1{color: #63C5DA;}  
