--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
           <style>
-              p {
+              body {
   background-image: url('mybackground.jpeg');
 }
               header{ background-color: #FFC0CB;}
