--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
           <style>
-              header{ background-color: #FFC0CB;}
+              header{color: #FFC0CB;}
            p{color:white;}
               h1{color: #63C5DA;}  
               body{background-color:black;
