--- a/javascripts.html
+++ b/javascripts.html
@@ -18,8 +18,7 @@
                   margin-left: 20px;
                   margin-right:20px;
               padding-top:25px;
-              padding-bottom:18px;
-              box-sizing: border-box;}
+              padding-bottom:18px;}
               nav a:hover {color: #63C5DA}
               container {width:80%;
                   margin:0 auto;}
