--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   background-image:url('mybackground.jpeg');
 }
               header{ background-color: #FFC0CB;}
-           p{color:white;}
+           p{color:pink;}
               h1{color: #63C5DA;}  
               body{background-color:black;
               margin:0;
