--- a/about.html
+++ b/about.html
@@ -4,9 +4,11 @@
           <style>
               body {
   background-image:url('mybackground.jpeg');
+                  .container{background-color: transparent; 
+                      width:800px}
 }
               header{ background-color: #FFC0CB;}
-           p{color:pink;}
+           p{color:hot pink;}
               h1{color: #63C5DA;}  
               body{background-color:black;
               margin:0;
