--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
     
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience.
         In addtion to that, I have been repairing computers for over a year now. I am passionate about developing websites because I love what I do and I have a steady source of motivation that drives me to do my best.</P>
-    <img src="passion.jpeg" alt="Badminton">
-    <img src="photography.jprg" alt="A girl clicking photos of nature">
+    <img src="passion.jpeg" alt="Badminton" width= "250px">
+    <img src="photography.jprg" alt="A girl clicking photos of nature" width="250px">
  
             
     </body>
