--- a/index.html
+++ b/index.html
@@ -28,20 +28,9 @@
         <title>Laila's Progamming Portfolio</title>
     </head>
     <body>
-        <header> 
-            <div class="container">
-                <nav>
-                    <ul> 
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="javascripts.html">Javascripts</a></li>
-                        <li><a href="apps.html">Apps</a></li>
-                        <li><a href="about.html">About Me</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+   
 <img src="mybanner.png" width="800px">
-
+<img src="home.jpg">
         
        <h1> Programmer Portfolio Walkthrough</h1>
         <p> I am Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
