--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
     <body>
    
 <img src="mybanner.png" width="800px">
-<img src="home.jpg">
-        
+<img src="myhome.jpg">
+           <img src="javascripts.jpg">
+           <img src="apps.jpg">
+        <img src="aboutme.jpg">
+     
        <h1> Programmer Portfolio Walkthrough</h1>
         <p> I am Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
             I have created this web page using HTML programming language. The navigation button links to javascript and about me page that I have written to be embedded in web pages. 
