--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
 <img src="mybanner.png" width="800px">
 <img src="myhome.jpg">
-           <img src="javascripts.jpg">
+           <img src="javascripts.jpg" <a href = "javascripts.html">>
            <img src="apps.jpg">
         <img src="aboutme.jpg">
      
