--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         <title>Laila's Progamming Portfolio</title>
     </head>
     <body>
-   
-<img src="mybanner.png" width="800px">
-<img src="myhome.jpg">
-           <img src="javascripts.jpg" <a href = "javascripts.html">>
-           <img src="apps.jpg">
-        <img src="aboutme.jpg">
+        <img src="mybanner.png" width="800px">
+ <table>
+     <tr>
+         <td align="center"><a href="index.html"><img src="myhome.jpg"></td>
+         <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
+         <td align="center"><a href="apps.html><img src="apps.jpg"></td>
+         <td align="center"><a href="about.html><img src="aboutme.jpg"></td>
+     </tr>
+        </table>
      
        <h1> Programmer Portfolio Walkthrough</h1>
         <p> I am Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
