--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
      <tr>
          <td align="center"><a href="index.html"><img src="myhome.jpg"></td>
          <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
-         <td align="center"><a href="apps.html><img src="apps.jpg"></td>
-         <td align="center"><a href="about.html><img src="aboutme.jpg"></td>
+         <td align="center"><a href="apps.html"><img src="apps.jpg"></td>
+         <td align="center"><a href="about.html"><img src="aboutme.jpg"></td>
      </tr>
         </table>
      
