--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
      </tr>
         </table>
      
-       <h1> Programmer Portfolio Walkthrough</h1>
-        <p> I am Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
-            I have created this web page using HTML programming language. The navigation button links to javascript and about me page that I have written to be embedded in web pages. 
+       <h1> JavaScripts</h1>
+        <p> </p>
             
     </body>
 </html>
