--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <img src="mybanner.png" width="800px">
