--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </head>
     <body>
         <img src="mybanner.png" width="800px">
- <table>
+ <table id="nav-table">
      <tr>
-         <td align="center"><a href="index.html"><img src="myhome.jpg"></td>
-         <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
-         <td align="center"><a href="apps.html"><img src="apps.jpg"></td>
-         <td align="center"><a href="about.html"><img src="aboutme.jpg"></td>
+         <td id="nav-td">><a href="index.html"><img src="myhome.jpg"></td>
+         <td id="nav-td"><a href="javascripts.html"><img src="javascripts.jpg"></td>
+         <td id="nav-td"><a href="apps.html"><img src="apps.jpg"></td>
+         <td id="nav-td"><a href="about.html"><img src="aboutme.jpg"></td>
      </tr>
         </table>
      
