--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
               body{background-color:black;
               margin:0;
                   font-family:'Work Sams', sans-serif;
-                  font-weight:300;}   
+                  font-weight:300;
+                  width: 800px;}
+#nav-table {width:800px ;}
+#nav-td { width: 200px ; text-align:center ;}
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <img src="mybanner.png" width="800px">
