--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
           <style>
            p{color:white;}
               h1{color: #63C5DA;}  
-              body{background-color:black;
-              margin:0;
-                  font-family:'Work Sams', sans-serif;
-                  font-weight:300;
-                  width: 800px;}
-#nav-table {width:800px ;}
-#nav-td { width: 200px ; text-align:center ;}
+              body { background-color : black ;
+                  width : 800px ; }
+#nav-table { width : 800px ;}
+#nav-td { width: 200px ; text-align : center ; }
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
@@ -24,10 +21,10 @@
          <td id="nav-td"><a href="apps.html"><img src="apps.jpg"></td>
          <td id="nav-td"><a href="about.html"><img src="aboutme.jpg"></td>
      </tr>
-        </table>
+        </table id="nav-table">
      
-       <h1> JavaScripts</h1>
-        <p> </p>
-            
+        <h1> Programmer Portfolio Walkthrough</h1>
+        <p> I am Laila Ghazi. This is my programming portfolio for CSC106 at <a href="https://www.uri.edu/">University of Rhode Island. </a> 
+            I have created this web page using HTML programming language. The navigation button links to javascript and about me page that I have written to be embedded in web pages.         
     </body>
 </html>
