--- a/apps.html
+++ b/apps.html
@@ -5,9 +5,7 @@
            p{color:white;}
               h1{color: #63C5DA;}  
               body{background-color:black;
-              margin:0;
-                  font-family:'Work Sams', sans-serif;
-                  font-weight:300;}   
+              width:800px;}   
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
