--- a/about.html
+++ b/about.html
@@ -2,50 +2,27 @@
 <html>
     <head>
           <style>
-              body {
-  background-image:url('mybackground.jpeg');
-                  .container{background-color: transparent; 
-                      width:800px}
-}
-              header{ background-color: #FFC0CB;}
-           p{color:hot pink;}
+           p{color:white;}
               h1{color: #63C5DA;}  
-              body{background-color:black;
-              margin:0;
-                  font-family:'Work Sams', sans-serif;
-                  font-weight:300;}
-              nav{ float:right;}
-              nav ul{ margin: 0;
-                  padding:0;
-                  box-sizing: border-box;
-                  list-style:none;}
-              nav li{ display: inline-block;
-                  margin-left: 20px;
-                  margin-right:20px;
-              padding-top:25px;
-              padding-bottom:18px;}
-              nav a:hover {color: #63C5DA}
-              container {width:80%;
-                  margin:0 auto;}
-              
+              body { background-color : black ;
+                  width : 800px ; }
+                    #nav-table { width : 800px ;}
+                      #nav-td { width: 200px ; text-align : center ; }
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
     </head>
     <body>
-        <header> 
-            <div class="container">
-                <nav>
-                    <ul> 
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="javascripts.html">Javascripts</a></li>
-                        <li><a href="apps.html">Apps</a></li>
-                        <li><a href="about.html">About Me</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-<img src="mybanner.png" width="800px">
+        <img src="mybanner.png" width="800px">
+ <table id="nav-table">
+     <tr>
+         <td id="nav-td">><a href="index.html"><img src="myhome.jpg"></td>
+         <td id="nav-td"><a href="javascripts.html"><img src="javascripts.jpg"></td>
+         <td id="nav-td"><a href="apps.html"><img src="apps.jpg"></td>
+         <td id="nav-td"><a href="about.html"><img src="aboutme.jpg"></td>
+     </tr>
+        </table id="nav-table">
+
         <h1> <strong> About Me </strong> </h1>
     
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience.
