--- a/javascripts.html
+++ b/javascripts.html
@@ -24,5 +24,6 @@
         </table>
      
        <h1> JavaScripts </h1>
+        <p> This page contains JavaScripts apps taht I have written in my CSC106 course at the <strong>University of Rhode Island</strong> using tools from< a href= "https://www.khanacademy.org/profile/me/courses"> khan academy</a>. 
     </body>
 </html>
