--- a/javascripts.html
+++ b/javascripts.html
@@ -5,9 +5,9 @@
            p{color:white;}
               h1{color: #63C5DA;}  
               body{background-color:black;
-              margin:0;
-                  font-family:'Work Sams', sans-serif;
-                  font-weight:300;}   
+              width : 800px ; }
+#nav-table { width : 800px ;}
+#nav-td { width: 200px ; text-align : center ; }   
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
@@ -24,6 +24,6 @@
         </table>
      
        <h1> JavaScripts </h1>
-        <p> This page contains JavaScripts apps taht I have written in my CSC106 course at the <strong>University of Rhode Island</strong> using tools from< a href= "https://www.khanacademy.org/profile/me/courses"> khan academy</a>. 
+        <p> This page contains JavaScripts apps taht I have written in my CSC106 course at the <strong>University of Rhode Island</strong> using tools from< a href= "https://www.khanacademy.org/profile/me/courses"> khan academy</a></p>. 
     </body>
 </html>
