--- a/apps.html
+++ b/apps.html
@@ -5,7 +5,9 @@
            p{color:white;}
               h1{color: #63C5DA;}  
               body{background-color:black;
-              width:800px;}   
+              width : 800px ; }
+#nav-table { width : 800px ;}
+#nav-td { width: 200px ; text-align : center ; }   
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
