--- a/javascripts.html
+++ b/javascripts.html
@@ -14,14 +14,14 @@
     </head>
     <body>
         <img src="mybanner.png" width="800px">
- <table>
+ <table id="nav-table">
      <tr>
          <td align="center"><a href="index.html"><img src="myhome.jpg"></td>
          <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
          <td align="center"><a href="apps.html"><img src="apps.jpg"></td>
          <td align="center"><a href="about.html"><img src="aboutme.jpg"></td>
      </tr>
-        </table>
+        </table id="nav-table">
      
        <h1> JavaScripts </h1>
         <p> This page contains JavaScripts apps taht I have written in my CSC106 course at the <strong>University of Rhode Island</strong> using tools from< a href= "https://www.khanacademy.org/profile/me/courses"> khan academy</a></p>. 
