--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
                   width : 800px ; }
                     #nav-table { width : 800px ;}
                       #nav-td { width: 200px ; text-align : center ; }
-              body { background-image: url('mybackground.jpeg');
-}
+              body { background-image : url('mybackground.jpeg'; }
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
