--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
         <h1> <strong> About Me </strong> </h1>
     
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience.
-        In addtion to that, I have been repairing computers for over a year now. I am passionate about developing websites because I love what I do and I have a steady source of motivation that drives me to do my best.</P>
+        In addtion to that, I have been repairing computers for over a year now. I am passionate about developing websites because I love what I do and I have a steady source of motivation that drives me to do my best.
     <img src="passion.jpeg" alt="Badminton" style="float:right" width="400">
     <img src="photography.jpeg" alt="A girl clicking photos of nature" style="float:left" width="400" >
- 
+        </p>
             
     </body>
 </html>
