--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
            p{color:white;}
               h1{color: #63C5DA;}  
               body { background-color : black ;
+                   background-image : url('mybackground.jpeg';
                   width : 800px ; }
                     #nav-table { width : 800px ;}
                       #nav-td { width: 200px ; text-align : center ; 
-               background-image : url('mybackground.jpeg'; }
+               }
               </style>
         <meta charset="utf-8">
         <title>Laila's Progamming Portfolio</title>
@@ -28,8 +29,8 @@
     
         <p> I am Laila, a <em>web developer</em> and a <em>web designer</em> based in the United States. I love helping people design better at invision. I use my passion and skills to create digital products and experience.
         In addtion to that, I have been repairing computers for over a year now. I am passionate about developing websites because I love what I do and I have a steady source of motivation that drives me to do my best.
-    <img src="passion.jpeg" alt="Badminton" style="float:right" width="400">
-    <img src="photography.jpeg" alt="A girl clicking photos of nature" style="float:left" width="400" >
+    <img src="passion.jpeg" alt="Badminton" style="float:right" width="300">
+    <img src="photography.jpeg" alt="A girl clicking photos of nature" style="float:left" width="300" >
         </p>
             
     </body>
