--- a/javascripts.html
+++ b/javascripts.html
@@ -25,5 +25,6 @@
      
        <h1> JavaScripts </h1>
         <p> This page contains JavaScripts apps taht I have written in my CSC106 course at the <strong>University of Rhode Island</strong> using tools from< a href= "https://www.khanacademy.org/profile/me/courses"> khan academy</a></p>. 
+ <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_bitmoji/5594782996414464">Ghazi_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_bitmoji/5594782996414464/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>  
     </body>
 </html>
