--- a/javascripts.html
+++ b/javascripts.html
@@ -24,9 +24,13 @@
         </table id="nav-table">
      
        <h1> JavaScripts </h1>
-        <p> This page contains JavaScripts apps taht I have written in my CSC106 course at the <strong>University of Rhode Island</strong> using tools from< a href= "https://www.khanacademy.org/profile/me/courses"> khan academy</a></p>. 
+        <p> This page contains JavaScripts apps that I have written in my CSC106 course at the <strong>University of Rhode Island</strong> using tools from <a href="https://www.khanacademy.org/profile/me/courses"> khan academy</a></p>. 
+        
  <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_bitmoji/5594782996414464">Ghazi_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_bitmoji/5594782996414464/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>  
  <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmoji/5392014067154944"> Ghazi_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmoji/5392014067154944/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_racingbitmoji/6613000791834624">Ghazi_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_racingbitmoji/6613000791834624/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/4651566193229824">Ghazi_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/4651566193229824/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script> 
+        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_racingbitmojifun/6108638395023360">Ghazi_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_racingbitmojifun/6108638395023360/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/5509698293383168">Ghazi_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/5509698293383168/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     </body>
 </html>
