--- a/javascripts.html
+++ b/javascripts.html
@@ -32,5 +32,6 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/4651566193229824">Ghazi_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/4651566193229824/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script> 
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_racingbitmojifun/6108638395023360">Ghazi_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_racingbitmojifun/6108638395023360/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/5509698293383168">Ghazi_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/5509698293383168/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+       <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_decision/5689690553892864">Ghazi_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_decision/5689690553892864/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     </body>
 </html>
