--- a/javascripts.html
+++ b/javascripts.html
@@ -34,5 +34,7 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/5509698293383168">Ghazi_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_dancingbitmojifun/5509698293383168/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_decision/5689690553892864">Ghazi_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_decision/5689690553892864/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_follow/6400987054522368">Ghazi_Follow</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_follow/6400987054522368/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_summations/4689836948111360">Ghazi_summations</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_summations/4689836948111360/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_zoo/5266179750412288">Ghazi_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_zoo/5266179750412288/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     </body>
 </html>
