--- a/apps.html
+++ b/apps.html
@@ -23,7 +23,7 @@
      </tr>
         </table id="nav-table">
        <h1> Apps</h1>
-        <p> This page contains <em>"app"</em> versions of my programs taht I wrote. They run in the browser of devices like phones. Put the link in the browser of your phone, or view this page and click on the link, and tey an app! </p>.
+        <p> This page contains <em>"app"</em> versions of my programs that I wrote. They run in the browser of devices like phones. Put the link in the browser of your phone, or view this page and click on the link, and tey an app! </p>.
        
     </body>
 </html>
