--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
          <td id="nav-td"><a href="javascripts.html"><img src="javascripts.jpg"></td>
          <td id="nav-td"><a href="apps.html"><img src="apps.jpg"></td>
          <td id="nav-td"><a href="about.html"><img src="aboutme.jpg"></td>
+         <td id="nav-td"><a href="finalproject.html"><img src="Final project.png"></td>
      </tr>
         </table id="nav-table">
      
