--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
            p{color:white;}
               h1{color: #63C5DA;}  
               body { background-color : black ;
-                  width : 800px ; }
-                    #nav-table { width : 800px ;}
+                  width : 1000px ; }
+                    #nav-table { width : 1000px ;}
                       #nav-td { width: 200px ; text-align : center ; 
                   background-image : url('mybackground.jpeg';  }
               </style>
@@ -21,6 +21,7 @@
          <td id="nav-td"><a href="javascripts.html"><img src="javascripts.jpg"></td>
          <td id="nav-td"><a href="apps.html"><img src="apps.jpg"></td>
          <td id="nav-td"><a href="about.html"><img src="aboutme.jpg"></td>
+         <td id="nav-td"><a href="finalproject.html"><img src="finalproject.png"></td>
      </tr>
         </table id="nav-table">
 
