--- a/finalproject.html
+++ b/finalproject.html
@@ -20,7 +20,7 @@
          <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
          <td align="center"><a href="apps.html"><img src="apps.jpg"></td>
          <td align="center"><a href="about.html"><img src="aboutme.jpg"></td>
-         <td align="center"><a href="finalproject.html"><img src="Final project.png"></td>
+         <td align="center"><a href="finalproject.html"><img src="finalproject.png"></td>
      </tr>
         </table id="nav-table">
        <h1> Final Project </h1>
