--- a/finalproject.html
+++ b/finalproject.html
@@ -24,7 +24,7 @@
      </tr>
         </table id="nav-table">
        <h1> Final Project </h1>
-        <p> This page contains <em>"app"</em> versions of my programs that I wrote. They run in the browser of devices like phones. Put the link in the browser of your phone, or view this page and click on the link, and tey an app! </p>.
+        <p> The player controls the beetleship around the screen that can move up and down and thrust forward. Player have to go through each pipe without hitting it to get a point. Once a player hits the pipe, game is over. Have Fun! </p>.
         <h2><a href="https://www.khanacademy.org/computer-programming/flappy-beetleship/6403004101607424">Flappy Beetleship</a></h2><script src="https://www.khanacademy.org/computer-programming/flappy-beetleship/6403004101607424/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
        
     </body>
