--- a/finalproject.html
+++ b/finalproject.html
@@ -24,7 +24,7 @@
      </tr>
         </table id="nav-table">
        <h1> Final Project </h1>
-        <p> The player controls the beetleship around the screen that can move up and down and thrust forward. Player have to go through each pipe without hitting it to get a point. Once a player hits the pipe, game is over. Have Fun! </p>.
+        <p> Instructions on how to play the game: <br> The player controls the beetleship around the screen that can move up and down and thrust forward. Player have to go through each pipe without hitting it to get a point. Once a player hits the pipe, game is over. Have Fun! </br> </p>.
         <h2><a href="https://www.khanacademy.org/computer-programming/flappy-beetleship/6403004101607424">Flappy Beetleship</a></h2><script src="https://www.khanacademy.org/computer-programming/flappy-beetleship/6403004101607424/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
        
     </body>
